--- a/src/components/shared/Product.module.scss
+++ b/src/components/shared/Product.module.scss
@@ -3,16 +3,17 @@
 
 .container {
     width: 250px;
-    background-color: rgb(255, 255, 255);
+    background-color: #f7f7f7;
     overflow: hidden;
     border-radius: 15px;
     margin: 0 6px 50px;
     transition: .3s;
 
     .cardImage {
-        width: 230px;
+        width: 100%;
         height: 200px;
-        padding: 0 10px
+        padding: 0 10px;
+        margin: 0 auto;
     }
 
     h3 {
