--- a/src/components/Store.module.scss
+++ b/src/components/Store.module.scss
@@ -2,7 +2,7 @@
     margin: 60px auto 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     max-width: 1300px;
 }
