--- a/src/components/shared/Footer.module.scss
+++ b/src/components/shared/Footer.module.scss
@@ -21,7 +21,7 @@
   margin: 0 auto;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 80px 0 0;
+  padding: 80px 20px 0;
 
   h3 {
     @include textStyle(1.3em, rgb(43, 44, 45), 700);
@@ -34,7 +34,6 @@
   }
 
   .aboutUs {
-    margin-left: 20px;
     width: 300px;
     display: flex;
     flex-direction: column;
@@ -129,5 +128,39 @@
 
   .toUp:hover {
     background-color: rgb(219, 219, 219);
+  }
+}
+
+@media (max-width: 1239px) {
+  .bottomFooter .toUp {
+    top: 25%;
+  }
+}
+
+@media (max-width: 1239px) {
+  .bottomFooter .toUp {
+    top: -10%;
+  }
+}
+
+@media (max-width: 872px) {
+  .bottomFooter .waveFooter {
+    margin-top: -50px;
+  }
+
+  .bottomFooter .toUp {
+    top: 20%;
+  }
+}
+
+@media (max-width: 568px) {
+  .bottomFooter .waveFooter {
+    margin-top: -25px;
+  }
+}
+
+@media (max-width: 430px) {
+  .bottomFooter .waveFooter {
+    margin-top: 0;
   }
 }
