added shopping cart to project

--- a/src/components/shared/Footer.module.scss
+++ b/src/components/shared/Footer.module.scss
@@ -37,6 +37,10 @@
     width: 300px;
     display: flex;
     flex-direction: column;
+
+    p {
+      margin: 0 10px;
+    }
   }
 
   .communic {
@@ -47,6 +51,8 @@
 
   .communic ul {
     list-style-type: none;
+    margin: 0 10px;
+    padding: 0 !important;
 
     li {
       text-align: left;
@@ -60,6 +66,8 @@
 
     ul {
       list-style-type: none;
+      margin: 0 10px;
+      padding: 0 !important;
     }
 
     li {
