--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,5 @@
 $textColor: rgb(244, 95, 63);
 $secondaryTextColor: #404040;
 $hoverTextColor: rgb(231, 67, 31);
+$backgroundColor: #f7f7f7;
+$hoverShadow: 7px 7px 15px rgba(0, 0, 0, 0.1);
