--- a/src/components/shared/Product.module.scss
+++ b/src/components/shared/Product.module.scss
@@ -2,59 +2,83 @@
 @import "../../scss/variables";
 
 .container {
-    width: 250px;
-    background-color: #f7f7f7;
-    overflow: hidden;
-    border-radius: 15px;
-    margin: 0 6px 50px;
-    transition: .3s;
+  width: 250px;
+  background-color: #f7f7f7;
+  overflow: hidden;
+  border-radius: 15px;
+  margin: 0 6px 50px;
+  transition: 0.3s;
 
-    .cardImage {
-        width: 100%;
-        height: 200px;
-        padding: 0 10px;
-        margin: 0 auto;
-    }
+  .cardImage {
+    width: 100%;
+    height: 200px;
+    padding: 0 10px;
+    margin: 0 auto;
+  }
 
-    h3 {
-        @include textStyle(1.1em, $secondaryTextColor, 700);
-        text-align: left;
-        margin: 25px 20px 15px;
-        font-size: 1.1rem;
-    }
+  h3 {
+    @include textStyle(1.1em, $secondaryTextColor, 700);
+    text-align: left;
+    margin: 25px 20px 15px;
+    font-size: 1.1rem;
+  }
 
-    p {
-        @include textStyle(1em, $secondaryTextColor, 500);
-        margin: 5px 20px;
-    }
+  p {
+    @include textStyle(1em, $secondaryTextColor, 500);
+    margin: 5px 20px;
+  }
 }
 
 .container:hover {
-    box-shadow: 7px 7px 15px rgba(0, 0, 0, .1);
+  box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.1);
 }
 
 .footerContainer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 10px 20px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 20px 15px;
 
-    .details {
-        text-decoration: none;
-        @include textStyle(1.1em, $textColor, 500)
-    }
+  .details {
+    text-decoration: none;
+    @include textStyle(1.1em, $textColor, 500);
+  }
 
-    .counterBtn button {
-        all: unset;
-        background-color: $textColor;
-        padding: 4px 10px;
-        border-radius: 5px;
-        @include textStyle(1em, #fff, 500);
-        transition: .4s;
-        cursor: pointer;
-    }
+  .counterBtn button {
+    background-color: $textColor;
+    border: none;
+    height: 30px;
+    width: 120px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 4px 12px -2px,
+      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    margin-left: 5px;
+    @include textStyle(0.9rem, #fff, 500);
+  }
 
-    .counterBtn button:hover {
-        background-color: $hoverTextColor;
-    }
+  .smallButton {
+    width: 30px !important;
+    font-size: 1.6rem !important;
+    font-weight: bold;
+    line-height: 30px;
+  }
+
+  .smallButton img {
+    width: 20px;
+  }
+
+  .counter {
+    display: inline-block;
+    width: 20px;
+    margin-left: 10px;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: $textColor;
+  }
+
+  .counterBtn button:hover {
+    background-color: $hoverTextColor;
+  }
 }
