--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,3 +3,4 @@ $secondaryTextColor: #404040;
 $hoverTextColor: rgb(231, 67, 31);
 $backgroundColor: #f7f7f7;
 $hoverShadow: 7px 7px 15px rgba(0, 0, 0, 0.1);
+$accessButton: #00ff00;
