--- a/src/components/shared/Footer.module.scss
+++ b/src/components/shared/Footer.module.scss
@@ -100,7 +100,7 @@
       cursor: pointer;
     }
 
-    .socialIcons a {
+    .socialIcons div {
       cursor: pointer !important;
       width: 35px;
       height: 35px;
